--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=job_portal
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=my_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
