--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=job_portal
-DB_USERNAME=laravel
+DB_PORT=3307
+DB_DATABASE=forge
+DB_USERNAME=forge
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
