--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME=JobFinder
 APP_ENV=local
 APP_KEY=base64:58v/FESSWbCklyHBohJ/MlYDiBQggmZQjBH6Xkbu0yg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://206.189.55.90
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=206.189.55.90
 DB_PORT=3306
 DB_DATABASE=job_portal
 DB_USERNAME=root
