--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=142.93.9.210
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=job_portal
-DB_USERNAME=root
+DB_USERNAME=laravel
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
